--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,9 +1,9 @@
 FROM mysql:8.0-debian
 EXPOSE 3000
 
-ENV MYSQL_ROOT_PASSWORD=password
-ENV MYSQL_DATABASE=todo
-ENV MYSQL_USER=todo-user
-ENV MYSQL_PASSWORD=password
+ENV MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD
+ENV MYSQL_DATABASE=$MYSQL_DATABASE
+ENV MYSQL_USER=$MYSQL_USER
+ENV MYSQL_PASSWORD=$MYSQL_PASSWORD
 
 COPY ./scripts/init.sql /docker-entrypoint-initdb.d/
